--- a/Front/project_Full/package.json
+++ b/Front/project_Full/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
     "react-bootstrap": "^2.9.1",
+    "react-datepicker": "^4.24.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
