--- a/Front/project_Full/package.json
+++ b/Front/project_Full/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.11.0",
     "@fullcalendar/daygrid": "^6.1.10",
     "@fullcalendar/react": "^6.1.10",
-    "@mui/material": "^5.14.18",
+    "@mui/icons-material": "^5.15.1",
+    "@mui/material": "^5.15.1",
     "@mui/x-data-grid": "^6.18.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +22,7 @@
     "react-datepicker": "^4.24.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
