--- a/Front/project_Full/package.json
+++ b/Front/project_Full/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.8.0",
     "react-big-calendar": "^1.8.5",
     "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.24.0",
