--- a/Back/festival/pom.xml
+++ b/Back/festival/pom.xml
@@ -67,6 +67,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- JWT 토큰 -->
+		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
 			<version>0.11.2</version>
@@ -83,21 +89,18 @@
 			<version>0.11.2</version>
 			<scope>runtime</scope>
 		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		
+
+		<!-- Google Mail 연동을 위한 라이브러리 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
+		<!-- FireBase 연동을 위한 라이브러리 -->
         <dependency>
 		    <groupId>com.google.firebase</groupId>
 		    <artifactId>firebase-admin</artifactId>
-		    <version>9.2.0</version> <!-- 최신 버전 확인 -->
+		    <version>9.2.0</version>
 		</dependency>
 		
 		<!-- validation -->
