[서버 배포] - 프론트(Front): 카카오맵 개인 API키 교체, 테스트용 주소 추가 - 백엔드(Back): AWS RDS(DB 서버), 배포용 프론트 주소 추가

--- a/Back/festival/src/main/resources/application.properties
+++ b/Back/festival/src/main/resources/application.properties
@@ -1,11 +1,24 @@
 
+# AWS server port test?
+#server.port=5000
+
+# AWS mariaDB
+#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://viva-la-fiesta.cxeaek6c4wrk.ap-northeast-2.rds.amazonaws.com:3306/festivaldb
+#spring.datasource.username=admin
+#spring.datasource.password=12345678
+
+# localhost test server port
 server.port=8090
 
+# localhost mariaDB
 spring.datasource.url=jdbc:mariadb://localhost:3306/festivaldb
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.generate-ddl=true 
 spring.jpa.show-sql=true
 
