[서버 배포] - 백엔드, 프론트 엔드 서버 배포 용 주소 추가

--- a/Back/festival/src/main/resources/application.properties
+++ b/Back/festival/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 
-# AWS server port test?
+## AWS server port test?
 #server.port=5000
-
-# AWS mariaDB
+#
+## AWS mariaDB
 #spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://viva-la-fiesta.cxeaek6c4wrk.ap-northeast-2.rds.amazonaws.com:3306/festivaldb
+##spring.datasource.url=jdbc:mariadb://viva-la-fiesta.cxeaek6c4wrk.ap-northeast-2.rds.amazonaws.com:3306/festivaldb
+#spring.datasource.url=jdbc:mariadb://viva-la-fiesta-e.cxioicii2q0x.us-east-1.rds.amazonaws.com:3306/festivaldb
 #spring.datasource.username=admin
 #spring.datasource.password=12345678
 
